# chiro

./: Cargo.toml  README.md
examples/: demo1.rs  demo10.rs  demo11.rs  demo2.rs  demo3.rs  demo4.rs  demo5.rs  demo6.rs  demo7.rs  demo8.rs  demo9.rs
src/: aliases.rs  boxart.rs  lib.rs
src/aliases/: drawable.rs  eventable.rs  geom.rs  mod.rs
src/boxart/: charset.rs  complex.rs  mod.rs  simple.rs
src/color/: mod.rs
src/font/: cp437.rs  mod.rs
src/input/: event.rs  mod.rs  state.rs
src/minifb/: clock.rs  mod.rs  press_keyboard.rs  type_keyboard.rs
src/minifb/mouse/: drag.rs  scroll_wheel.rs  wiggle.rs
src/modifiers/: mod.rs  reexport_cursor.rs  reexport_sharedmut.rs  trait_impl.rs
src/output/: fchar.rs  fstring.rs  interface.rs  mod.rs  wrap.rs
src/output/fstring/: formatting.rs  mod.rs
src/screen/: affordances.rs  dirtyregion.rs  mod.rs  pixelfb.rs  render.rs
src/shared/: color.rs  drawable.rs  eventable.rs  geom.rs  mod.rs  records.rs  sharing.rs  utils.rs
src/shared/drawable/: brush.rs  cursor.rs  interface.rs  mod.rs  sharing.rs  supertile.rs  utils.rs
src/shared/drawable/modifiers/: mod.rs  reexport_cursor.rs  reexport_sharedmut.rs  trait_impl.rs
src/tileset/: mod.rs
src/window/: clock.rs  keyboard.rs  mod.rs  press_keyboard.rs  simple_keyboard.rs  type_keyboard.rs
src/window/mouse/: drag.rs  mod.rs  scroll_wheel.rs  wiggle.rs
