[package]
name = "chiro"
description = "A curses-style terminal view that runs inside a pixel buffer (Rewrite of chiropterm)"
version = "0.0.4"
authors = ["Nyeogmi Choi"]
edition = "2021"
repository = "https://github.com/nyeogmi/chiro"
readme = "README.md"
keywords = ["terminal", "curses"]
categories = []
license = "MIT"
include = [
    "/Cargo.toml",
    "/README.md",
    "/src/**/*",
]

[dependencies]
# TODO: Update these
# TODO: minifb should be a feature

enum-map = "1.1.1"
lazy_static = "1.4"
euclid = "0.22.6"
gridd-euclid = "0.1.3"
minifb = "0.19.3"
